# tggrok

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
src/tggrok/: __init__.py  grok.py
